Volume Object crash is back... this time with NanoVDB #82516

Closed
opened 2020-11-08 23:53:27 +01:00 by Steffen Dünner · 7 comments

System Information
Operating system: Linux-5.8.0-25-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 455.32.00

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-11-08 15:12, hash: 39012146e1 <- Own compile with NanoVDB
Worked: version: 2.92.0 Alpha, branch: master, commit date: 2020-11-08 15:12, hash: 39012146e1 <- Own compile without NanoVDB

Short description of error
Some days ago I reported a crash bug that got fixed here: https://developer.blender.org/rB6a2a6fa5143e7b115c47b8e2ef4787f569c670df
But I noticed that with my builds it still crashes while the Buildbot builds are stable.
I then recompiled a build without the (still unsuppported?) NanoVDB and it's as stable as the one from the Buildbot. So, is this even a "legal" bug report? If not, just ignore it.
BTW this crash only seem to be happening when a VDB is involved in opposite to the one I reported before where a simple Volume Object would crash Blender. It now also takes a frame change to cause the crash.

Exact steps for others to reproduce the error

  • Download and extract the ZIP
    Volume_Crash_v02.zip
  • Open the Blend file and press Z + up (or whatever way you prefer to start preview render in the viewport).
  • Use the mouse to click around in the timeline to change the current frame. I noticed that when you use the right and left arrow key it's much harder to crash Blender.
  • It only crashes with builds using the NanoVDB option, at least as far as I tested it.
**System Information** Operating system: Linux-5.8.0-25-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 455.32.00 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-11-08 15:12, hash: `39012146e1` <- Own compile with NanoVDB Worked: version: 2.92.0 Alpha, branch: master, commit date: 2020-11-08 15:12, hash: `39012146e1` <- Own compile without NanoVDB **Short description of error** Some days ago I reported a crash bug that got fixed here: https://developer.blender.org/rB6a2a6fa5143e7b115c47b8e2ef4787f569c670df But I noticed that with my builds it still crashes while the Buildbot builds are stable. I then recompiled a build without the (still unsuppported?) NanoVDB and it's as stable as the one from the Buildbot. So, is this even a "legal" bug report? If not, just ignore it. BTW this crash only seem to be happening when a VDB is involved in opposite to the one I reported before where a simple Volume Object would crash Blender. It now also takes a frame change to cause the crash. **Exact steps for others to reproduce the error** - Download and extract the ZIP [Volume_Crash_v02.zip](https://archive.blender.org/developer/F9241295/Volume_Crash_v02.zip) - Open the Blend file and press Z + up (or whatever way you prefer to start preview render in the viewport). - Use the mouse to click around in the timeline to change the current frame. I noticed that when you use the right and left arrow key it's much harder to crash Blender. - It only crashes with builds using the NanoVDB option, at least as far as I tested it.

Added subscriber: @SteffenD

Added subscriber: @SteffenD

Now that NanoVDB is enabled by default, this bug will hopefully be confirmed as soon as the Buildbots are updated tonight.

Now that NanoVDB is enabled by default, this bug will hopefully be confirmed as soon as the Buildbots are updated tonight.

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can reproduce crash with nanoVDB

>	[Inline Frame] blender.exe!ccl::BVH::pack_triangle(int) Line 271	C++

 	blender.exe!ccl::BVH::pack_primitives() Line 307	C++
 	blender.exe!ccl::BVH::refit(ccl::Progress & progress) Line 189	C++
 	blender.exe!ccl::Geometry::compute_bvh(ccl::Device * device, ccl::DeviceScene * dscene, ccl::SceneParams * params, ccl::Progress * progress, int n, int total) Line 222	C++
 	[External Code]	
 	[Inline Frame] blender.exe!std::_Func_class<void>::operator()() Line 951	C++
 	blender.exe!tbb::internal::function_task<std::function<void __cdecl(void)>>::execute() Line 1049	C++
 	[External Code]	
 	[Inline Frame] blender.exe!tbb::task::wait_for_all() Line 809	C++
 	blender.exe!tbb::internal::task_group_base::wait() Line 168	C++
 	blender.exe!ccl::TaskPool::wait_work(ccl::TaskPool::Summary * stats) Line 46	C++
 	blender.exe!ccl::GeometryManager::device_update(ccl::Device * device, ccl::DeviceScene * dscene, ccl::Scene * scene, ccl::Progress & progress) Line 1571	C++
 	blender.exe!ccl::Scene::device_update(ccl::Device * device_, ccl::Progress & progress) Line 266	C++
 	blender.exe!ccl::Scene::update(ccl::Progress & progress, bool & kernel_switch_needed) Line 502	C++
 	blender.exe!ccl::Session::update_scene() Line 1029	C++
 	blender.exe!ccl::Session::run_cpu() Line 789	C++
 	blender.exe!ccl::Session::run() Line 864	C++
 	[Inline Frame] blender.exe!std::_Func_class<void>::operator()() Line 951	C++
 	blender.exe!ccl::thread::run(void * arg) Line 53	C++
 	[External Code]	
I can reproduce crash with nanoVDB ``` > [Inline Frame] blender.exe!ccl::BVH::pack_triangle(int) Line 271 C++ blender.exe!ccl::BVH::pack_primitives() Line 307 C++ blender.exe!ccl::BVH::refit(ccl::Progress & progress) Line 189 C++ blender.exe!ccl::Geometry::compute_bvh(ccl::Device * device, ccl::DeviceScene * dscene, ccl::SceneParams * params, ccl::Progress * progress, int n, int total) Line 222 C++ [External Code] [Inline Frame] blender.exe!std::_Func_class<void>::operator()() Line 951 C++ blender.exe!tbb::internal::function_task<std::function<void __cdecl(void)>>::execute() Line 1049 C++ [External Code] [Inline Frame] blender.exe!tbb::task::wait_for_all() Line 809 C++ blender.exe!tbb::internal::task_group_base::wait() Line 168 C++ blender.exe!ccl::TaskPool::wait_work(ccl::TaskPool::Summary * stats) Line 46 C++ blender.exe!ccl::GeometryManager::device_update(ccl::Device * device, ccl::DeviceScene * dscene, ccl::Scene * scene, ccl::Progress & progress) Line 1571 C++ blender.exe!ccl::Scene::device_update(ccl::Device * device_, ccl::Progress & progress) Line 266 C++ blender.exe!ccl::Scene::update(ccl::Progress & progress, bool & kernel_switch_needed) Line 502 C++ blender.exe!ccl::Session::update_scene() Line 1029 C++ blender.exe!ccl::Session::run_cpu() Line 789 C++ blender.exe!ccl::Session::run() Line 864 C++ [Inline Frame] blender.exe!std::_Func_class<void>::operator()() Line 951 C++ blender.exe!ccl::thread::run(void * arg) Line 53 C++ [External Code] ```

This issue was referenced by 5c01ecd2bf

This issue was referenced by 5c01ecd2bf5d0dc0d42f90aba2a3d9f948d16bb8

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-11-12 20:23:49 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82516
No description provided.